# study

./: alembic.ini  hotels.py  load_script.py  main.py  pyproject.toml  schemas.py
src/: config.py  database.py  main.py
src/api/: hotels.py
src/migrations/: env.py
src/migrations/versions/: 05e8dffbfecf_initial_migration.py  2025_10_20_2331-7c577d1258d8_initial_migration.py
src/models/: __init__.py  hotels.py  rooms.py
src/repositories/: base.py  hotels.py  rooms.py
src/schemas/: schemas.py
