[project]
name = "first"
version = "0.1.0"
description = ""
authors = [
    {name = "Caesar",email = "kebec2015@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)",
    "aiohttp (>=3.13.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
